--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <!-- Font -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -34,8 +35,7 @@
     rel="stylesheet">
     <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/bootstrap-grid.css">
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
-    <!-- <link rel="stylesheet" href="css/main-color.css" id="colors"> -->
+    <link rel="stylesheet" href="css/main-color.css" id="colors">
 </head>
 
 <body>
@@ -54,51 +54,11 @@
     
     <!-- <script type="text/javascript" src="scripts/jquery-3.6.0.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script type="text/javascript" src="scripts/jquery-migrate-3.3.2.min.js"></script>
-  <script type="text/javascript" src="scripts/mmenu.min.js"></script>
-  <script type="text/javascript" src="scripts/chosen.min.js"></script>
-  <script type="text/javascript" src="scripts/slick.min.js"></script>
-  <script type="text/javascript" src="scripts/rangeslider.min.js"></script>
-  <script type="text/javascript" src="scripts/magnific-popup.min.js"></script>
-  <script type="text/javascript" src="scripts/waypoints.min.js"></script>
-  <script type="text/javascript" src="scripts/counterup.min.js"></script>
-  <script type="text/javascript" src="scripts/jquery-ui.min.js"></script>
-  <script type="text/javascript" src="scripts/tooltips.min.js"></script>
-  <script type="text/javascript" src="scripts/custom.js"></script>
- 
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <!-- <script type="text/javascript" src="scripts/jquery-migrate-3.3.2.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-  <!-- Leaflet // Docs: https://leafletjs.com/ -->
-<script src="scripts/leaflet.min.js"></script>
 
-<!-- Leaflet Maps Scripts -->
-<script src="scripts/leaflet-markercluster.min.js"></script>
-<script src="scripts/leaflet-gesture-handling.min.js"></script>
-<script src="scripts/leaflet-listeo.js"></script>
-
-<!-- Leaflet Geocoder + Search Autocomplete // Docs: https://github.com/perliedman/leaflet-control-geocoder -->
-<script src="scripts/leaflet-autocomplete.js"></script>
-<script src="scripts/leaflet-control-geocoder.js"></script>
-
-
-<!-- Typed Script -->
-<script type="text/javascript" src="scripts/typed.js"></script>
-<script>
-var typed = new Typed('.typed-words', {
-strings: ["Attractions"," Restaurants"," Hotels"],
-	typeSpeed: 80,
-	backSpeed: 80,
-	backDelay: 4000,
-	startDelay: 1000,
-	loop: true,
-	showCursor: true
-});
-</script>
-
-
-<!-- Style Switcher
-================================================== -->
-<script src="scripts/switcher.js"></script>
+    <script src="./scripts/custom.js"></script>
+ 
 
 <div id="style-switcher">
 	<h2>Color Switcher <a href="#"><i class="sl sl-icon-settings"></i></a></h2>
