--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Playfair+Display:wght@400;500;700&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/bootstrap-grid.css">
+    <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/main-color.css" id="colors">
 </head>
 
@@ -57,7 +57,7 @@
     <!-- <script type="text/javascript" src="scripts/jquery-migrate-3.3.2.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 
-    <script src="./scripts/custom.js"></script>
+    <!-- <script src="./scripts/custom.js"></script> -->
  
 
 <div id="style-switcher">
